# clock_v2_cpp

./: .gitignore  CMakeLists.txt  README.md  background_manager.cpp  background_manager.h  build.sh  clock.cpp  clock.h  clothing_advice.cpp  clothing_advice.h  conanfile.py  conanfile.txt  config.cpp  config.h  constants.cpp  constants.h  display.cpp  display.h  http_client.cpp  http_client.h  logger.cpp  logger.h  main.cpp  rpi_toolchain.cmake  snow_system.cpp  snow_system.h  version.h.in  weather.cpp  weather.h  weather_api.cpp  weather_api.h
profiles/: raspberry
